# GPT2

./: NOTES.md  README.md  data_utils.py  model.py  pyproject.toml  train_gp2_with_nn.py  train_gpt2.ipynb  train_gpt2.py  train_model.py  training.py  what_does_lightning_handle_automatically.md  why_use_lightning_data_module.md
lightning_logs/version_1/: metrics.csv
